[package]
name = "online-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ={ version = "0.13.0", default-features = false, features = [
  # Bevy functionality:
  "multi-threaded",     # Run with multithreading
  "bevy_asset",         # Assets management
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "default_font",       # Embed a minimal default font for text/UI

  # File formats:
  "png",    # PNG image format for simple 2D images

  # Platform-specific:
  #"x11",                   # Linux: Support X11 windowing system

  # Non-Default features

  # Bevy functionality:
  "asset_processor",      # Asset processing

  # Development/Debug features:
  "dynamic_linking",   # Dynamic linking for faster compile-times
]}
bevy_kira_audio = "0.19.0"
bevy_renet = "0.0.11"
color-eyre = "0.6.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3