[package]
name = "online-pong"
version = "0.1.0"
edition = "2021"
authors = ["HasChad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ={ version = "0.14.0", default-features = false, features = [
  # Bevy functionality:
  "multi_threaded",     # Run with multithreading
  "bevy_asset",         # Assets management
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "default_font",       # Embed a minimal default font for text/UI

  # File formats:
  "png",    # PNG image format for simple 2D images

  # Platform-specific:
  #"x11",                   # Linux: Support X11 windowing system

  # Non-Default features

  # Bevy functionality:
  "asset_processor",      # Asset processing

  # Development/Debug features:
  "dynamic_linking",   # Dynamic linking for faster compile-times
]}
bevy_kira_audio = "0.20.0"
bevy_renet = "0.0.11"
color-eyre = "0.6.2"
avian2d = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"